# azureost-core-rs

./: .gitignore  Cargo.toml  README.md
src/: async_data_processor.rs  callbacks.rs  errors.rs  exporting.rs  general_processor.rs  lib.rs  manifest.rs  process_all.rs  selector.rs
tests/: integration_test.rs
