[package]
name = "azure-ost-core"
version = "0.1.15"
authors = ["Cerulan Lumina <cerulan@cerulan.net>"]
edition = "2015"

[features]
lamemp3 = ["lame"]

[dependencies]
lame = {version = "0.1.3", optional = true}
lewton = "0.9.3"
serde_json = "1.0.33"
sha1 = {version = "0.6.0", features = ["serde"]}
num_cpus = "1.9.0"
threadpool = "1.7.1"
vorbis = "0.1.0"
fallible-iterator = "0.1.6"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.sqpack_blue]
#path = "../sqpack-blue"
git = "https://github.com/CerulanLumina/sqpack-blue"
branch = "dev"
version = "0.0.11"
